--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -431,13 +431,10 @@ open_graph:
 footer:
   # 页脚第一行文字的 HTML，建议保留 Fluid 的链接，用于向更多人推广本主题
   # HTML of the first line of the footer, it is recommended to keep the Fluid link to promote this theme to more people
-  content: ' <a href="https://icp.gov.moe/?keyword=20226555" target="_blank" rel="noopener"><img src="https://icp.gov.moe/images/ico64.png" alt="萌icp备20226555" style="width: 16px; height: 16px;"></a>
+  content: '<a href="https://icp.gov.moe/?keyword=20226555" target="_blank" rel="noopener"><img src="https://icp.gov.moe/images/ico64.png" alt="萌icp备20226555" style="width: 16px; height: 16px;"></a>
  <a href="http://www.91667.cn">驾校宝典</a>
  <a href="https://didi.seowhy.com">搜外友链</a>
- <a href="http://www.shijunjiaoyu.com/">诗歌</a>
- <div style="text-align: center; font-size: 16px;">
-<a href="https://202271.xyz/sitemap.xml" target="_blank" rel="noopener" style="color: #333; text-decoration: none;">网站地图</a> | <a href="https://202271.xyz/atom.xml" target="_blank" rel="noopener" style="color: #333; text-decoration: none;">RSS订阅</a>
-</div>
+ <a href="http://www.shijunjiaoyu.com/">诗歌</a>'
 
    # 展示网站的 PV、UV 统计数
    # Display website PV and UV statistics
