--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 星河博客
 subtitle: '星河博客——网络资源分享博客'
 description: '星河博客——网络资源分享博客'
 keywords: 星河博客,hexo美化,fluid主题,个站商店,xyz域名,中文博客,typecho,个人博客
-author: 小星河
+author: 星河
 language: zh-CN
 timezone: ''
 
