--- a/_config.next.yml
+++ b/_config.next.yml
@@ -95,14 +95,14 @@ open_graph:
 # Value before `||` delimiter is the target link, value after `||` delimiter is the name of Font Awesome icon.
 # External url should start with http:// or https://
 menu:
-  #home: / || fa fa-home
-  #about: /about/ || fa fa-user
-  #tags: /tags/ || fa fa-tags
-  #categories: /categories/ || fa fa-th
-  #archives: /archives/ || fa fa-archive
-  #schedule: /schedule/ || fa fa-calendar
-  #sitemap: /sitemap.xml || fa fa-sitemap
-  #commonweal: /404/ || fa fa-heartbeat
+  home: / || fa fa-home
+  about: /about/ || fa fa-user
+  tags: /tags/ || fa fa-tags
+  categories: /categories/ || fa fa-th
+  archives: /archives/ || fa fa-archive
+  schedule: /schedule/ || fa fa-calendar
+  sitemap: /sitemap.xml || fa fa-sitemap
+  醉里博客: https://202271.xyz/ || fa fa-heartbeat
 
 # Enable / Disable menu icons / item badges.
 menu_settings:
@@ -156,7 +156,7 @@ site_state: true
 social:
   GitHub: https://github.com/xiaohao8 || fab fa-github
   E-Mail: mailto:ds98k@foxmail.com || fa fa-envelope
-  #Weibo: https://weibo.com/yourname || fab fa-weibo
+  醉里博客: https://202271.xyz || fab fa-stack-overflow
   #Twitter: https://twitter.com/yourname || fab fa-twitter
   #FB Page: https://www.facebook.com/yourname || fab fa-facebook
   #StackOverflow: https://stackoverflow.com/yourname || fab fa-stack-overflow
@@ -176,7 +176,7 @@ links_settings:
   layout: block
 
 links:
-  #Title: https://example.com
+  醉里博客: https://202271.xyz
 
 # Table of Contents in the Sidebar
 # Front-matter variable (nonsupport wrap expand_all).
