--- a/_config.next.yml
+++ b/_config.next.yml
@@ -900,14 +900,14 @@ vendors:
   # The CDN provider of NexT internal scripts.
   # Available values: local | jsdelivr | unpkg | cdnjs | custom
   # Warning: If you are using the latest master branch of NexT, please set `internal: local`
-  internal: custom
+  internal: unpkg
   # The default CDN provider of third-party plugins.
   # Available values: local | jsdelivr | unpkg | cdnjs | custom
   # Dependencies for `plugins: local`: https://github.com/next-theme/plugins
-  plugins: cdnjs
+  plugins: unpkg
   # Custom CDN URL
   # For example:
-   custom_cdn_url: https://npm.elemecdn.com/${npm_name}@${version}/${minified}
+  # custom_cdn_url: https://npm.elemecdn.com/${npm_name}@${version}/${minified}
   # custom_cdn_url: https://cdnjs.cloudflare.com/ajax/libs/${cdnjs_name}/${version}/${cdnjs_file}
   custom_cdn_url:
 
