Update Post Draft _config.fluid.yml by Qexo

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -434,6 +434,9 @@ footer:
   content: '<a href="https://icp.gov.moe/?keyword=20226555" target="_blank">
   <img src="https://icp.gov.moe/images/ico64.png" alt="萌icp备" width="20" height="20">
   <span>萌备20226555</span>
+</a>
+<a href="https://web.51.la/report/main?comId=21534687" target="_blank">
+  <img src="https://pic3.zhimg.com/v2-86bd79f42994415d1b74400880f1011d_l.jpg?source=1940ef5c" alt="51la统计" style="height: 30px; width: 30px;">
 </a>'
  
  
