--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -1,12 +1,12 @@
 navbar:
-  blog_title: 醉里博客
+  blog_title: Ink  Dyeing
   ground_glass:
     enable: true
 index:
   banner_img: https://i.imgtg.com/2023/05/05/CJFsq.jpg
   banner_img_height: 100
   slogan:
-    text: " You are back it with all the good things in the world. 你逆光而来，配得上这世间所有的好。"
+    text: " 墨染水云间，流年如画轻盈了幽闲。。"
 post:
   banner_img: https://imgapi.xl0408.top/index.php
   banner_img_height: 70
@@ -28,163 +28,5 @@ about:
   banner_img_height: 80
   subtitle: null
   avatar: /images/uploads/yutzi.jpg
-  name: 醉里
+  name: 墨染_nlx
   intro: My blog
-links:
-  banner_img: https://t.mwm.moe/pc
-  banner_img_height: 80
-  subtitle: null
-  items:
-    - title: 小理の小窝
-      intro: 一个普通学生的普通生活
-      link: https://xiaolii.com/
-      avatar: https://502.chat/Imagesource/icon.jpg
-    - title: 安知鱼
-      link: "https://anzhiy.cn/ "
-      intro: 生活明朗，万物可爱
-      avatar: https://image.anzhiy.cn/adminuploads/1/2022/09/15/63232b7d91d22.jpg
-    - title: Diary of LX
-      intro: 随便写写
-      link: https://diary.bid/
-      avatar: https://diary.bid/wp-content/uploads/2022/11/%E4%B8%8B%E8%BD%BD.jpg
-    - title: 张洪Heo
-      link: https://blog.zhheo.com/
-      intro: 分享设计与科技生活
-      avatar: https://img.zhheo.com/i/2022/08/19/62ff32fa28da1.png
-    - avatar: https://cdn.dusays.com/avatar.png
-      link: https://dusays.com/
-      title: 杜老师说
-    - title: XKの博客
-      link: https://www.xukaiyyds.cn/
-      avatar: https://www.xukaiyyds.cn/img/favicon.png
-      intro: 一个干净整洁的个人博客
-    - title: 青衣
-      link: https://www.qingyi1220.cn/
-      intro: 世界既不黑也不白，而是一道精致的灰
-      avatar: https://www.qingyi1220.cn/img/Tsingyi.jpg
-    - title: 8：9社区
-      intro: 用一生去抵达遥远的未来
-      avatar: https://cdn.sady0.com/pic/%E8%B5%84%E6%BA%90%2050000.png
-      link: https://8b9.cn
-    - title: 小染笔记
-      intro: 遇见即是上上签.
-      link: https://sady0.com/
-      avatar: https://cdn.sady0.com/pic/91531896_p0.jpg
-    - title: Mycpen
-      link: https://cpen.top/
-      avatar: https://image.cpen.top/image/avatar.jpg
-      intro: 这是一个有趣的博客
-    - title: Xlenco
-      link: https://xlenco.eu.org/
-      intro: 最好的地方,是没去过的地方。最好的时光，是回不来的时光。
-      avatar: https://xlenco.eu.org/img/head.webp
-    - title: 兔芽网
-      intro: 优麦兔旗下新松计划产品
-      link: https://www.tuya.ink/
-      avatar: https://www.tuya.ink/wp-content/uploads/2022/12/72d5fbcf44170825.png
-    - title: LyShark - 孤风洗剑
-      intro: 道，可道，非常道；名，可名，非常名。—— 老子《道德经》
-      link: https://www.lyshark.com/
-      avatar: https://www.lyshark.com/images/baidu_logo.png
-    - title: INJU银烛
-      link: https://inju.eu.org/
-      intro: 海纳百川，有容乃大
-      avatar: https://inju0524.github.io/img/head.png
-    - title: 淇云博客
-      link: https://www.pengqi.club/
-      intro: null
-      avatar: https://tc.pengqi.club/images/2023/01/03/6a3bafbd4004.png
-    - title: Pil0tXia
-      link: https://www.pil0txia.com/
-      intro: null
-      avatar: https://static.pil0txia.com/assets/03_3_600p.webp
-    - title: Ryan’s Blog
-      link: https://www.moezz.cn/
-      intro: null
-      avatar: https://bu.dusays.com/2023/01/21/63cbff54b3114.jpeg
-    - title: Phbeats-Blog
-      link: https://blog.phbeats.cn/
-      intro: 记录学习历程和生活感悟
-      avatar: https://blog.phbeats.cn/img/QQ_avatar.jpg
-    - title: Akilarの糖果屋
-      link: https://akilar.top/
-      intro: 期待您的光临！
-      avatar: https://npm.elemecdn.com/akilar-friends@latest/avatar/akilar.top.jpg
-    - title: 又见苍岚
-      link: https://www.zywvvd.com
-      intro: 蓝天依旧，明眸如初
-      avatar: https://www.zywvvd.com/image/avatar.png
-    - title: MghyのBlog
-      link: https://lmghy.top/
-      avatar: https://tu.mghy.top/i/2022/12/10/j364kb-1.webp
-      intro: 为了明天的摸鱼所以现在摸鱼ing
-    - link: https://www.cwwwxl.top/
-      title: 梦创空间博客
-      intro: 领略生命的快意。
-      avatar: https://s2.loli.net/2023/01/17/CO7oAY8ZBjmLEVF.jpg
-    - title: 哔哔哔哔
-      link: https://bebebe.be/
-      intro: Steven Lynn的个人博客
-      avatar: https://s2.loli.net/2022/12/01/Degbk6vMHoIx9ms.png
-    - title: 是非题
-      avatar: https://other.shifeiti.com/logo/logo.png
-      intro: 记录生活，热爱跑步，学习 FPGA 中
-      link: https://www.shifeiti.com/
-    - title: 小朊的朋友圈
-      link: https://www.xrpyq.com
-      intro: 隔牖风惊竹，开门雪满山！
-      avatar: https://q.qlogo.cn/g?b=qq&nk=227389436&s=640
-    - title: 云间深白网
-      intro: 一个不知道写啥的的小破站
-      link: https://www.yunio.cn/
-      avatar: https://www.yunio.cn/wp-content/uploads/2023/01/1672925868-newlogo.svg
-    - title: Sh1n3zZ の 小屋
-      link: https://blog.shinezz.cc/
-      intro: Sh1n3zZ の 小屋 - 一个小小秘密基地ヾ(^▽^*)))
-      avatar: https://blog.shinezz.cc/img/ServerIcon_Flu.png
-    - link: https://linguoguang.com/
-      title: 木木困玉光的博客
-      avatar: /images/uploads/yutzi.jpg
-    - title: 夜雨炊烟
-      intro: 唯有热爱，可抵岁月漫长。
-      link: https://yychuiyan.com/
-      avatar: https://op.yychuiyan.com/avatar.webp
-    - title: 徐乔年
-      intro: 不惊、不惑、不扰。
-      avatar: https://hsuqnian.top/picture.png
-      link: https://hsuqnian.top/
-    - title: 小蔡博客
-      link: https://www.caipeixuan.com/
-      intro: 小蔡博客—走在寻找灵魂的路上
-      avatar: https://www.caipeixuan.com/wp-content/uploads/2023/04/logo_20230422_uugai.com_1682137275937-e1682137339562.png
-    - avatar: https://upload.storeweb.cn/upload/member/avatar/1/6899da3aabb91d5b6720bfd3e7ea101d.jpg
-      title: 个站商店
-      link: https://storeweb.cn/
-      intro: 个站商店
-    - avatar: https://pic.imgdb.cn/item/63f16cddf144a010070697c8.jpg
-      link: https://www.gan1ser.top/
-      intro: 紫箫吟断，素笺恨切
-      title: GanSer
-    - title: 动荡の初二少年
-      intro: 一个少年的博客
-      link: https://www.yt-blog.top/
-      avatar: https://npm.elemecdn.com/ytblogimg/webp/logo.webp
-    - title: Jiewen’s Blog
-      link: https://www.jiewen.run
-      intro: 行动起来，活在当下
-      avatar: https://www.jiewen.run/upload/jiewen_icon.png
-    - avatar: https://b.925i.cn/logo
-      link: https://b.925i.cn/
-      title: 小莫唐尼
-      intro: 一个爱凑热闹、喜欢捣鼓前端的博主。
-    - link: https://www.nmwbk.com
-      title: 牛魔博客
-      avatar: https://oss.nmwbk.com/wp-content/uploads/2020/10/20201010141735736.png
-      intro: 做一个有深度的博客
-    - link: http://www.91667.cn
-      title: 驾校宝典
-      avatar: /images/uploads/1616421595370-wallhaven-q6ov7d.jpg
-    - title: 醉浪の博客
-      link: https://blog.zuilang.tk/
-      avatar: https://image.zuilang.tk/avatar/avatar.png
-      intro: 一只喜欢七彩球的枯叶蝶
