Update Post Draft _config.fluid.yml by Qexo

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -437,7 +437,7 @@ footer:
 </a>
 <a href="https://web.51.la/report/main?comId=21534687" target="_blank">
   <img src="https://pic3.zhimg.com/v2-86bd79f42994415d1b74400880f1011d_l.jpg?source=1940ef5c" alt="51la统计" style="height: 30px; width: 30px;">
-</a> <a href="evolution-host" target="_blank">https://evolution-host.com/</a>'
+</a> <a href="https://evolution-host.com/">evolution-host</a>'
  
  
    # 展示网站的 PV、UV 统计数
