--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -1,12 +1,12 @@
 navbar:
-  blog_title: 醉里博客
+  blog_title: 高仿博客
   ground_glass:
     enable: true
 index:
   banner_img: https://i.imgtg.com/2023/05/05/CJFsq.jpg
   banner_img_height: 100
   slogan:
-    text: " You are back it with all the good things in the world. 你逆光而来，配得上这世间所有的好。"
+    text: " 若不想输给任何人，就得先认清自己的弱小"
 post:
   banner_img: https://imgapi.xl0408.top/index.php
   banner_img_height: 70
@@ -28,7 +28,7 @@ about:
   banner_img_height: 80
   subtitle: null
   avatar: /images/uploads/yutzi.jpg
-  name: 醉里
+  name: 高仿
   intro: My blog
 links:
   banner_img: https://t.mwm.moe/pc
